# plasma

./: .gitignore  CMakeLists.txt  README.md  main.cpp  main_ICP.cpp
0RAPIT/DataControl/: CMakeLists.txt  dataexchanger.cpp  dataexchanger.h  dataexchanger_functions.cpp  datamanager.cpp  datamanager.h  datapool.cpp  datapool.h  scalar.cpp  scalar.h
0RAPIT/Domain/: CMakeLists.txt  calculate_cell_face_area.cpp  calculate_dA_dL.cpp  calculate_face_coefficient.cpp  calculate_face_sign.cpp  cellbycell_tracking.cpp  cellbycell_tracking.h  cgns.cpp  cgns.h  cgnsBuild.defs  connection.cpp  connection.h  domain.cpp  domain.h  element.cpp  element.h  element_indexing.cpp  facetagging.cpp  fieldview.cpp  fieldview.h  gmsh.cpp  gmsh.h  gradient.cpp  o_domain_test.cpp  preprocessing.cpp  preprocessing.h  preprocessingtool.cpp  preprocessingtool.h  pti.cpp  pti.h  repartition.cpp  repartition.h  structured_mesh.cpp  surface.cpp  surface.h
0RAPIT/IO/: CMakeLists.txt  io.cpp  io.h  tecplot_output.cpp  tecplot_output.h  vtk_output.cpp  vtk_output.h
0RAPIT/PETScSolver/: CMakeLists.txt
0RAPIT/metis/: CMakeLists.txt
0RAPIT/metis/libmetis/: CMakeLists.txt  mcutil.c
0RAPIT/system/: CMakeLists.txt  sys_debug.cpp  sys_debug.h  sys_log.cpp  sys_log.h  tools.cpp  tools.h  uuid_functions.cpp  uuid_functions.h
Case_Template/: 1channel.list  4MeanEnergy.inp  Solver.inp  Species.inp  chemistry_parameter.txt  input.json
Case_Template/Rate_Table/: elastic.txt  ionization_Ar.txt  superelastic_Arm.txt
Case_Templete/: 2species_name.list  5Collision.inp  Solver.inp  chemistry_parameter.txt  input.json
Case_Templete/Rate_Table/: excitation_Arm.txt  ionization_Arm.txt
Chemistry/: CMakeLists.txt  chemistry.cpp  chemistry.h  reaction.cpp  reaction.h  species.cpp  species.h
PlasmaFluid/: CMakeLists.txt  PETSc_solver.cpp  PETSc_solver.h  PFM.hpp  PFM_MPP.hpp  Table.hpp  chemistry-main.cpp  chemistry.h  config_structure.cpp  config_structure.hpp  domain_structure.cpp  domain_structure.hpp  post_structure.cpp  post_structure.hpp  solver_FD_maxwell.cpp  solver_FD_maxwell.hpp  solver_drift_diffusion.cpp  solver_drift_diffusion.hpp  solver_energy_density.cpp  solver_energy_density.hpp  solver_fluid_model.cpp  solver_fluid_model.hpp  solver_navier_stokes.cpp  solver_navier_stokes.hpp  solver_photoionization.cpp  solver_photoionization.hpp  solver_poisson.cpp  solver_poisson.hpp  solver_poisson_explicit.cpp  solver_poisson_explicit.hpp  variable_structure.cpp  variable_structure.hpp  variable_structure_NS.cpp  variable_structure_NS.hpp
PlasmaFluid_ICP/: CMakeLists.txt  PFM.hpp  chemistry-main.cpp  config_structure.cpp  domain_structure.cpp  main.h11  post_structure.cpp  post_structure.hpp  solver_FD_maxwell.cpp  solver_FD_maxwell.hpp  solver_energy_density.cpp  solver_fluid_model.cpp  solver_fluid_model.hpp  solver_poisson.cpp  solver_poisson.hpp  variable_structure.cpp  variable_structure.hpp
Quasi1D_Argon/: 1channel.list  1channel.list.txt  2cm.msh  2cm.pw  2cm_200.msh  2species_name.list  4cm.msh  Q1D_3p8cm.msh  Solver.inp  Species.inp  chemistry_parameter.txt  input.json
Quasi1D_Argon/Rate_Table/: elastic.txt  ionization_Ar.txt
bulid/: CMakeCache.txt  Makefile  cmake_install.cmake
bulid/PlasmaFluid/: Makefile  cmake_install.cmake
tools/: CMakeLists.txt  Case_3_V04-NS-NoSolid.msh  Case_3_v11.msh  interpolation.cpp  read.json  source.json  tmp2.json
